Improve config-file structure and parsing

--- a/one-time-script.conf
+++ b/one-time-script.conf
@@ -1,19 +1,53 @@
-# configuration for the unattended configuration/installation scripts
+# configuration for the pi-boot-script configuration/installation scripts
+# to use non-default parameters, uncomment and change the value
 
-NEW_PARTITION_SIZE_MB=288       # minimum for FAT32 partition is 260 MB
-NEW_PARTITION_LABEL=config      # no spaces
-NEW_LOCALE='en_GB.UTF-8'        # see /usr/share/i18n/SUPPORTED
-NEW_TIMEZONE='Europe/London'	# a file in /usr/share/zoneinfo/
-NEW_HOSTNAME_COMPANY=''			# betweeen 'pi4' and the serial number
-NEW_SSH_SETTING=0               # 0=on, 1=off
-NEW_WIFI_COUNTRY=GB             # see /usr/share/zoneinfo/iso3166.tab
-NEW_WIFI_SSID="Our network"
-NEW_WIFI_PASSWORD="Secret"
-NEW_BOOT_BEHAVIOUR=B1           # B1=console, B2=cons+autologin, B3=desktop, B4=desk+auto
-NEW_SD_CARD_NUMBER=XX           # Its number in your catalogue. Is put in a file on /boot
-PACKAGES_TO_INSTALL=(tree screen reptyr ipython3)
-  # space-separated list between ( and )
-NODE_JS_SOURCE_URL='https://deb.nodesource.com/setup_13.x'
-  # find the latest URL at
-  # https://github.com/nodesource/distributions/blob/master/README.md
+# disk management
+# create an additional FAT32 partition, writeable by user pi
+# for application logs etc. (only on Raspbian Buster and later).
+# if not desired, set its size to 0 (minimum for FAT32 partition is 260 MB)
+#new_partition_size_MB = 288
+#new_partition_label = logs
+
+# localisation
+#
+# locale and text encoding - a list is in /usr/share/i18n/SUPPORTED
+#new_locale = en_GB.UTF-8
+#
+# time zone - a file inside /usr/share/zoneinfo/
+#new_timezone = Europe/London
+
+# networking
+#
+# hostname of the Pi is set automatically to e.g. pi3-2c45df
+# with optional tag in-between, like pi3-basement-2c45df
+#new_hostname_tag = 
+#
+# automatic start of the SSH daemon at boot: 0 = on, 1 = off
+#new_ssh_setting = 0
+
+# wifi settings
+# country code from /usr/share/zoneinfo/iso3166.tab
+#new_wifi_country = GB
+#new_wifi_ssid = "Our network"
+#new_wifi_password = "Secret"
+
+# boot behaviour: what you see on the connected monitor/tv
+# B1 = console, B2 = cons+autologin, B3 = desktop, B4 = desktop+autologin
+#new_boot_behaviour = B1
+
+# some data on the /boot partition about the system, for recognising it.
+# the file is named SD-card-n.txt with n the card's number in your catalogue:
+#sd_card_number = XX
+
+# install packages (programs)
+#
+# which packages to install, as a space-separated list.
+# for example,  tree screen reptyr ipython3
+#packages_to_install = 
+#
+# where to get a recent version of Node.js bundled with npm.
+# the latest URL can be found at
+# https://github.com/nodesource/distributions/blob/master/README.md
+# and looks like https://deb.nodesource.com/setup_13.x
+#node_js_source_url = 
 
