--- a/one-time-script.conf
+++ b/one-time-script.conf
@@ -5,31 +5,39 @@
 # create an additional FAT32 partition, writeable by user pi
 # for application logs etc. (only on Raspbian Buster and later).
 # if not desired, set its size to 0 (minimum for FAT32 partition is 32 MB)
-#new_partition_size_MB = 100
+new_partition_size_MB = 0
 #new_partition_label = logs
+
+# password
+#
+# pi user password
+#new_password = raspberry
 
 # localisation
 #
+# keyboard
+new_keyboard = fr
+#
 # locale and text encoding - a list is in /usr/share/i18n/SUPPORTED
-#new_locale = en_GB.UTF-8
+new_locale = fr_FR.UTF-8
 #
 # time zone - a file inside /usr/share/zoneinfo/
-#new_timezone = Europe/London
+new_timezone = Europe/Paris
 
 # networking
 #
 # hostname of the Pi is set automatically to e.g. pi3-2c45df
 # with optional tag in-between, like pi3-basement-2c45df
-#new_hostname_tag = 
+#new_hostname_tag =
 #
 # automatic start of the SSH daemon at boot: 0 = on, 1 = off
-#new_ssh_setting = 0
+new_ssh_setting = 1
 
 # wifi settings
 # country code from /usr/share/zoneinfo/iso3166.tab
-#new_wifi_country = GB
-#new_wifi_ssid = "Our network"
-#new_wifi_password = "Secret"
+new_wifi_country = FR
+new_wifi_ssid = "Our network"
+new_wifi_password = "Secret"
 
 # boot behaviour: what you see on the connected monitor/tv
 # B1 = console, B2 = cons+autologin, B3 = desktop, B4 = desktop+autologin
@@ -43,11 +51,11 @@
 #
 # which packages to install, as a space-separated list.
 # for example,  tree screen reptyr ipython3
-#packages_to_install = 
+packages_to_install = vim
 #
 # where to get a recent version of Node.js bundled with npm.
 # the latest URL can be found at
 # https://github.com/nodesource/distributions/blob/master/README.md
 # and looks like https://deb.nodesource.com/setup_13.x
-#node_js_source_url = 
+#node_js_source_url =
 
